# gerber2png-service

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  run.sh
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  gerber2png.py  main.py  printers.json  pyproject.toml  requirements.txt
backend/src/app/: gerber2png.py  main.py
backend/tests/: conftest.py  test_gerber2png.py  test_main.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html  manifest.json  site.webmanifest
frontend/src/: App.tsx
frontend/src/api/: printers.ts
frontend/src/components/: FileUpload.tsx
frontend/src/pages/: About.tsx  Home.tsx
